--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GitHub Star Counter</title>
+    <title>Extension Popup</title>
     <style>
       body {
         width: 200px;
@@ -10,8 +10,9 @@
     </style>
   </head>
   <body>
-    <h2>GitHub Star Counts:</h2>
-    <h3>Nihao!</h3>
-    <ul id="repoList"></ul>
+    <h2>Toggle Functionality for Current Domain</h2>
+    <p>Current domain: <span id="currentDomain"></span></p>
+    <button id="toggleButton">Toggle</button>
+    <script src="popup.js"></script>
   </body>
 </html>
